# turbofec

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  configure.ac  turbofec.pc.in
cmake/: CPack.STGZ_Header.sh.in  package.txt
docker/: Dockerfile  README.md
include/: Makefile.am
include/turbofec/: conv.h  rate_match.h  turbo.h
src/: .gitignore  Makefile.am  conv_dec.c  conv_enc.c  conv_rate_match.c  conv_sse.h  turbo_dec.c  turbo_enc.c  turbo_rate_match.c  turbo_sse.h
tests/: .gitignore  Makefile.am  codes.c  codes.h  conv_test.c  noise.c  noise.h  turbo_test.c
